# L2laserSDK

L2SDK/: CMakeLists.txt  README.md  SDK说明文档.docx
L2SDK/L2_SDK_Demo/: CMakeLists.txt  L2_SDK_Demo.cpp  L2_SDK_Demo.h
L2SDK/l2_sdk/: CMakeLists.txt  HC_serial.cpp  L2DeviceHandle.cpp  L2DeviceHandle.h  base.cpp  base.h  data_struct.h  l2_sdk.cpp  l2_sdk.h
